--- a/Portfolio/html/AnaniPortfolio.html
+++ b/Portfolio/html/AnaniPortfolio.html
@@ -28,23 +28,23 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Anani <span>Samuel</span></h1>
-			<h3>I'am a Front-end Web Developer.</h3>
+			<h3><span>I'am a UX/UI Designer & </span>Front-end Web Developer.</h3>
 			<div class="news">
 				<form>
 					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
 					<input type="submit" name="submit" value="Lets Start">
-				</form>
+				</form> 
 			</div>
 		</div>
 	</div>
 	<!----About section start --->
 	<section class="about">
 		<div class="main">
-		<img src="../image/anani.jpg">
+		<img src="../image/hope.jpg">
 		<div class="about-text">
 			<h2>About Me</h2>
-			<h5>Developer <span> & Designer</span></h5>
-			<p>I am a front-end developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device.</p>
+			<h5>Designer <span> & Developer</span></h5>
+			<p>Welcome to my Portfolio! I am a versatile professional with expertise in UX/UI design and front-end development. With a strong foundation in design principles and technical skills, I create intuitive and visually appealing digital experiences that captivate users.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device.</p>
 			<button type="button">Download CV</button>
 		</div>
 		</div>
